argo-cd/overlays/production/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    -  argo-cd.tradersclub.com.br
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ssl-https-credential
      httpsRedirect: true
      mode: SIMPLE
